<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".presentation.CoinDetailActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">

            <ImageView
                android:id="@+id/iv_logoCoin"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/coin_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_symbols"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textColor="#000"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_logoCoin"
                tools:text="BTC / USD" />

            <TextView
                android:id="@+id/tv_price_label"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/price"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_symbols" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tv_price_label"
                app:layout_constraintTop_toBottomOf="@id/tv_symbols"
                tools:text="16000.31" />

            <TextView
                android:id="@+id/tv_min_price_label"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/min_per_day"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_price" />

            <TextView
                android:id="@+id/tv_min_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/red"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tv_min_price_label"
                app:layout_constraintTop_toBottomOf="@id/tv_price"
                tools:text="13043" />

            <TextView
                android:id="@+id/tv_max_price_label"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/max_per_day"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_min_price_label" />

            <TextView
                android:id="@+id/tv_max_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/green"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tv_max_price_label"
                app:layout_constraintTop_toBottomOf="@id/tv_min_price_label"
                tools:text="20432" />

            <TextView
                android:id="@+id/tv_last_market_label"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/last_market"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_max_price_label" />

            <TextView
                android:id="@+id/tv_last_market"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tv_last_update_time_label"
                app:layout_constraintTop_toBottomOf="@id/tv_max_price_label"
                tools:text="Some market" />

            <TextView
                android:id="@+id/tv_last_update_time_label"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/last_update"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_last_market_label" />

            <TextView
                android:id="@+id/tv_last_update_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tv_last_update_time_label"
                app:layout_constraintTop_toBottomOf="@id/tv_last_market_label"
                tools:text="22:30:41" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>